# magnifying-glass

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
include/mglass/: ellipse_shape.h  image.h  magnifiers.h  mglass.h  primitives.h  rectangle_shape.h  shape.h  shapes.h
src/: .gitignore  CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/mglass/: CMakeLists.txt  ellipse_shape.cpp  image.cpp  magnifiers.cpp  mglass.cpp  rectangle_shape.cpp  shapes.cpp
src/products/: CMakeLists.txt
src/products/internal/: CMakeLists.txt
src/products/internal/mglass-extensions/: CMakeLists.txt  polymorphic_shape.h  polymorphic_shapes.cpp  polymorphic_shapes.h
src/products/mglass-cli/: CMakeLists.txt  main.cpp
src/products/mglass-gui/: CMakeLists.txt  imageview.cpp  imageview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  polymorphic_shape.h  polymorphic_shapes.cpp  polymorphic_shapes.h
tests/: CMakeLists.txt
tests/lib/mglass/: CMakeLists.txt  ellipse_shape_tests.cpp  image_tests.cpp  magnifiers_tests.cpp  rectangle_shape_tests.cpp  tests.cpp
tests/resources/: lenna_data.cpp  lenna_data.h
